fix session restore of tabs/views of untitled documents

will allow us to restore the right tabs even for untitled documents
and avoids that we create new untitled documents on session restore

BUG: 464703
BUG: 462112
BUG: 462523
BUG: 468573